--- a/settings.gradle
+++ b/settings.gradle
@@ -17,8 +17,9 @@ pluginManagement {
     // Google Services
     id "com.google.gms.google-services"        version "4.4.3"
 
-    // Hilt Gradle plugin (resmi)
-    id "com.google.dagger.hilt.android"        version "2.56.2" // dagger.dev docs
+    // Hilt + KSP (versi yang match Kotlin 2.2.10)
+    id "com.google.dagger.hilt.android"        version "2.52"
+    id "com.google.devtools.ksp"               version "2.2.10-1.0.25"
   }
 }
 
