--- a/app/build.gradle
+++ b/app/build.gradle
@@ -210,6 +210,7 @@ android {
       zipAlignEnabled true
       signingConfig = signingConfigs.debug
       resValue 'string', 'app_name', 'Debug Organic Maps'
+      buildConfigField 'boolean', 'USE_FIRESTORE', 'false'
       if (project.ext.googleFirebaseServicesEnabled) {
         firebaseCrashlytics { nativeSymbolUploadEnabled true }
       }
@@ -221,6 +222,7 @@ android {
       shrinkResources = true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
       resValue 'string', 'app_name', project.ext.appName
+      buildConfigField 'boolean', 'USE_FIRESTORE', 'true'
       if (project.ext.googleFirebaseServicesEnabled) {
         firebaseCrashlytics { nativeSymbolUploadEnabled true }
       }
@@ -235,6 +237,7 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
       matchingFallbacks = ['debug', 'release']
       resValue 'string', 'app_name', 'Beta Organic Maps'
+      buildConfigField 'boolean', 'USE_FIRESTORE', 'false'
       if (project.ext.googleFirebaseServicesEnabled) {
         firebaseCrashlytics { nativeSymbolUploadEnabled true }
         firebaseAppDistribution {
