--- a/app/src/google/AndroidManifest.xml
+++ b/app/src/google/AndroidManifest.xml
@@ -11,5 +11,9 @@
             android:name="com.undefault.bitride.auth.AuthActivity"
             android:exported="false" />
 
+        <activity
+            android:name="com.undefault.bitride.downloader.AutoDownloadActivity"
+            android:exported="false" />
+
     </application>
 </manifest>
