Izinkan injeksi Hilt pada BaseMwmFragmentActivity

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,8 @@ enableTrace=OFF
 supportedLocalizations=af,ar,az,be,bg,ca,cs,da,de,el,en,en_GB,es,es_MX,et,eu,fa,fi,fr,fr_CA,iw,hi,hu,in,it,ja,ko,lt,lv,mr,mt,nb,nl,pl,pt,pt_BR,ro,ru,sk,sr,sv,sw,th,tr,uk,vi,zh,zh_HK,zh_MO,zh_TW
 
 # JDK path
-org.gradle.java.home=C\:/Program Files/Eclipse Adoptium/jdk-17.0.16.8-hotspot
+# Gunakan JDK yang tersedia di lingkungan build
+# (sediakan JAVA_HOME secara lokal bila diperlukan)
 
 # KAPT di Kotlin 2.x: hindari fallback ke LV 1.9 (menghapus warning)
 kapt.use.k2=true
